# tolstoytree

./: CHANGELOG.md  LICENSE  README.md  my-project.cabal  output.txt  tolstoytree.cabal
app/: Main.hs
lib/: ReadFile.hs  TokenizeText.hs  Tree.hs  WriteFile.hs
test/: TestReadFile.hs  TestTokenizeText.hs  TestTree.hs  TestWriteFile.hs  Tests.hs  output-test.txt  testfile.txt
