cabal-version:      2.4
name:               tolstoytree
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Laura Engleitner, Florian Widhalm
maintainer:         laura.engleitner@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library tolstoytree-lib
    default-language:   Haskell2010
    hs-source-dirs:     lib
    exposed-modules:    Tree, ReadFile, TokenizeText, WriteFile
    build-depends:      base ^>=4.17.2.1, split >=0.2.3, parallel >=3.2.2.0
 
executable tolstoytree-exe
    default-language:   Haskell2010
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base ^>=4.17.2.1, tolstoytree-lib, parallel >=3.2.2.0
    ghc-options:        -threaded

test-suite tolstoytree-test
    import:             warnings
    default-language:   Haskell2010
    other-modules:      TestTree, TestReadFile, TestTokenizeText, TestWriteFile
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Tests.hs
    build-depends:      base ^>=4.17.2.1, HUnit ^>=1.6, tolstoytree-lib
